# framer

./: biome.json  commitlint.config.ts  index.html  lefthook.yml  package.json  pnpm-lock.yaml  tsconfig.app.json  unocss.config.ts  vite.config.ts
config/: vite.base.ts  vite.dev.ts  vite.pro.ts
src/: index.css  index.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: command.rs  lib.rs  main.rs
src/layout/: index.tsx  main.tsx  nav.tsx
src/styles/: theme.css
